syntax = "proto3";

option go_package = "common/proto/";

package api;

message User {
    int64 UserID = 1;
    string FirstName = 2;
    string LastName = 3;
    string Email = 4;
    string UserName = 5;
    string Password = 6;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserResponse {
    User user = 1;
}

message UpdateUserResponse {
    User user = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}

message GetUserRequest {
    int64 UserID = 1;
}

message CreateUserRequest {
    string FirstName = 1;
    string LastName = 2;
    string Email = 3;
    string UserName = 4;
    string Password = 5;
}

message UpdateUserRequest {
    string FirstName = 1;
    string LastName = 2;
    string Email = 3;
    string UserName = 4;
    string Password = 5;
}